--- a/package.json
+++ b/package.json
@@ -1,122 +1,123 @@
 {
-	"name": "abkit",
-	"displayName": "accessibility-testkit",
-	"description": "",
-	"version": "0.0.1",
-	"engines": {
-		"vscode": "^1.66.0"
-	},
-	"categories": [
-		"Other"
-	],
-	"activationEvents": [
-		"onCommand:abkit.menu"
-	],
-	"main": "./dist/extension.js",
-	"contributes": {
-		"commands": [
-			{
-				"command": "abkit.menu",
-				"title": "ABKit: Select a feature from the menu",
-				"shortTitle": "Menu"
-			},
-			{
-				"command": "abkit.treeViewInsert",
-				"title": "Insert",
-				"icon": "./src/resources/edit.svg"
-			},
-			{
-				"command": "abkit.treeViewRefresh",
-				"title": "Refresh",
-				"icon": "./src/resources/refresh.svg"
-			},
-			{
-				"command": "abkit.treeViewClear",
-				"title": "Clear"
-			},
-			{
-				"command": "abkit.treeViewEditEntry",
-				"title": "Edit",
-				"icon": "./src/resources/edit.svg"
-			},
-			{
-				"command": "abkit.treeViewDeleteEntry",
-				"title": "Delete"
-			}
-		],
-		"menus": {
-			"view/title": [
-				{
-					"command": "abkit.treeViewInsert",
-					"when": "view == treeView",
-					"group": "navigation"
-				},
-				{
-					"command": "abkit.treeViewRefresh",
-					"when": "view == treeView",
-					"group": "navigation"
-				},
-				{
-					"command": "abkit.treeViewClear",
-					"when": "view == treeView"
-				}
-			],
-			"view/item/context": [
-				{
-					"command": "abkit.treeViewEditEntry",
-					"when": "view == treeView && viewItem == bstNode",
-					"group": "inline"
-				},
-				{
-					"command": "abkit.treeViewDeleteEntry",
-					"when": "view == treeView && viewItem == bstNode"
-				}
-			]
-		},
-		"views": {
-			"tree-view": [
-				{
-					"id": "treeView",
-					"name": "Tree View",
-					"contextualTitle": "Tree View"
-				}
-			]
-		},
-		"viewsContainers": {
-			"activitybar": [
-				{
-					"id": "tree-view",
-					"title": "Tree View",
-					"icon": "./src/resources/dep.svg"
-				}
-			]
-		}
-	},
-	"scripts": {
-		"vscode:prepublish": "npm run package",
-		"compile": "webpack",
-		"watch": "webpack --watch",
-		"package": "webpack --mode production --devtool hidden-source-map",
-		"compile-tests": "tsc -p . --outDir out",
-		"watch-tests": "tsc -p . -w --outDir out",
-		"pretest": "npm run compile-tests && npm run compile && npm run lint",
-		"lint": "eslint src --ext ts",
-		"test": "node ./out/test/runTest.js"
-	},
-	"devDependencies": {
-		"@types/vscode": "^1.66.0",
-		"@types/glob": "^7.2.0",
-		"@types/mocha": "^9.1.0",
-		"@types/node": "14.x",
-		"@typescript-eslint/eslint-plugin": "^5.16.0",
-		"@typescript-eslint/parser": "^5.16.0",
-		"eslint": "^8.11.0",
-		"glob": "^7.2.0",
-		"mocha": "^9.2.2",
-		"typescript": "^4.5.5",
-		"ts-loader": "^9.2.8",
-		"webpack": "^5.70.0",
-		"webpack-cli": "^4.9.2",
-		"@vscode/test-electron": "^2.1.3"
-	}
+  "name": "a11y-kit",
+  "displayName": "accessibility-testkit",
+  "description": "",
+  "version": "0.0.1",
+  "publisher": "MicroFish91",
+  "engines": {
+    "vscode": "^1.66.0"
+  },
+  "categories": [
+    "Other"
+  ],
+  "activationEvents": [
+    "onCommand:a11y-kit.menu"
+  ],
+  "main": "./dist/extension.js",
+  "contributes": {
+    "commands": [
+      {
+        "command": "a11y-kit.menu",
+        "title": "a11y-kit: Select UI feature from menu for accessibility",
+        "shortTitle": "Menu"
+      },
+      {
+        "command": "a11y-kit.treeViewInsert",
+        "title": "Insert",
+        "icon": "./src/resources/edit.svg"
+      },
+      {
+        "command": "a11y-kit.treeViewRefresh",
+        "title": "Refresh",
+        "icon": "./src/resources/refresh.svg"
+      },
+      {
+        "command": "a11y-kit.treeViewClear",
+        "title": "Clear"
+      },
+      {
+        "command": "a11y-kit.treeViewEditEntry",
+        "title": "Edit",
+        "icon": "./src/resources/edit.svg"
+      },
+      {
+        "command": "a11y-kit.treeViewDeleteEntry",
+        "title": "Delete"
+      }
+    ],
+    "menus": {
+      "view/title": [
+        {
+          "command": "a11y-kit.treeViewInsert",
+          "when": "view == treeView",
+          "group": "navigation"
+        },
+        {
+          "command": "a11y-kit.treeViewRefresh",
+          "when": "view == treeView",
+          "group": "navigation"
+        },
+        {
+          "command": "a11y-kit.treeViewClear",
+          "when": "view == treeView"
+        }
+      ],
+      "view/item/context": [
+        {
+          "command": "a11y-kit.treeViewEditEntry",
+          "when": "view == treeView && viewItem == bstNode",
+          "group": "inline"
+        },
+        {
+          "command": "a11y-kit.treeViewDeleteEntry",
+          "when": "view == treeView && viewItem == bstNode"
+        }
+      ]
+    },
+    "views": {
+      "tree-view": [
+        {
+          "id": "treeView",
+          "name": "Tree View",
+          "contextualTitle": "Tree View"
+        }
+      ]
+    },
+    "viewsContainers": {
+      "activitybar": [
+        {
+          "id": "tree-view",
+          "title": "Tree View",
+          "icon": "./src/resources/dep.svg"
+        }
+      ]
+    }
+  },
+  "scripts": {
+    "vscode:prepublish": "npm run package",
+    "compile": "webpack",
+    "watch": "webpack --watch",
+    "package": "webpack --mode production --devtool hidden-source-map",
+    "compile-tests": "tsc -p . --outDir out",
+    "watch-tests": "tsc -p . -w --outDir out",
+    "pretest": "npm run compile-tests && npm run compile && npm run lint",
+    "lint": "eslint src --ext ts",
+    "test": "node ./out/test/runTest.js"
+  },
+  "devDependencies": {
+    "@types/vscode": "^1.66.0",
+    "@types/glob": "^7.2.0",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "14.x",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
+    "eslint": "^8.11.0",
+    "glob": "^7.2.0",
+    "mocha": "^9.2.2",
+    "typescript": "^4.5.5",
+    "ts-loader": "^9.2.8",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "@vscode/test-electron": "^2.1.3"
+  }
 }
