switch name and display name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "a11y-kit",
-  "displayName": "accessibility-testkit",
+  "name": "accessibility-testkit",
+  "displayName": "a11y-kit",
   "description": "a11y-kit enables the user to quickly check VS Code UI configurations for screen reader compliance",
   "version": "0.0.1",
   "publisher": "MicroFish",
