--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "a11y-kit",
   "description": "a11y-kit enables the user to quickly check VS Code UI configurations for screen reader compliance",
   "icon": "resources/laptop.png",
-  "version": "1.0.1-alpha.0",
+  "version": "1.1.0",
   "publisher": "MicroFish",
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
     "onCommand:a11y-kit.menu",
     "onCommand:a11y-kit.sandbox"
   ],
+  "browser": "./dist/extension.js",
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
@@ -116,19 +117,19 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.66.0",
     "@types/glob": "^7.2.0",
     "@types/mocha": "^9.1.0",
     "@types/node": "14.x",
+    "@types/vscode": "^1.73.0",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
+    "@vscode/test-electron": "^2.1.3",
     "eslint": "^8.11.0",
     "glob": "^7.2.0",
     "mocha": "^9.2.2",
-    "typescript": "^4.5.5",
     "ts-loader": "^9.2.8",
+    "typescript": "^4.5.5",
     "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2",
-    "@vscode/test-electron": "^2.1.3"
+    "webpack-cli": "^4.9.2"
   }
 }
